# ecommerce_analysis

./: .gitignore  README.md  pyproject.toml  start.py
notebooks/: eda.ipynb
sql/: query.sql  query_create_obt_parquet.sql
src/: main.py
