[tool.poetry]
name = "ecommerce-analysis"
version = "0.1.0"
description = "analysis of various indices to build KPIs."
authors = ["Thomás Freire"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
duckdb = "^0.9.2"
boto3 = "^1.34.37"
load-dotenv = "^0.1.0"
pandas = "^2.2.0"
jupyter = "^1.0.0"
pyarrow = "^15.0.0"
psycopg = "^3.1.18"
sqlalchemy = "^2.0.26"
psycopg-binary = "^3.1.18"
dbt-core = "^1.7.8"
dbt-postgres = "^1.7.8"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
